# CS111

./: .gitignore  README.md  init.sh
Proj0/: CMakeLists.txt  Makefile  README  SmokeTest.sh  lab0.c  main.c
Proj1/Part A/: CMakeLists.txt  lab1a.c
Proj1/PartA/: Makefile  README  lab1a  lab1a.c
Proj1/PartB/: .gitignore  CMakeLists.txt  Makefile  README  lab1b-client.c  lab1b-server.c
Proj2/PartA/: .gitignore  CMakeLists.txt  Makefile  Makefile.patch  README  SortedList.c  SortedList.h  addplots.sh  gencsv  gencsvy  genplots.sh  lab2_add.c  lab2_add.csv  lab2_add.gp  lab2_list.c  lab2_list.csv  listcsv  listplots.sh
Proj2/PartB/: .gitignore  CMakeLists.txt  Makefile  README  SortedList.c  lab2_list.c  lab2_list.gp  lab2b.gp  lab2b_list.csv  listcsv  makecsv.sh
Proj3/PartA/: .gitignore  CMakeLists.txt  Makefile  README  lab3a.cpp  test.csv  test_sorted.csv
Proj3/PartB/: .gitignore  Makefile  README  check.sh  getscripts.sh  input.sh  input.txt  lab3b.py  trivial.csv
Proj4/PartA/: .gitignore  Makefile  README
Proj4/PartB/: CMakeLists.txt  Makefile  README  lab4b.c  smoke.sh  utilities.c  utilities.h
Proj4/PartC/: .gitignore  CMakeLists.txt  Makefile  README  lab4c_tcp.c  lab4c_tls.c  utilities.c  utilities.h
